--- a/curriculo.html
+++ b/curriculo.html
@@ -37,7 +37,7 @@
             <h2 class="apresentacao__conteudo__titulo">Estudos</h2>
             <div class="apresentacao__conteudo__texto">
             <ul class="apresentacao__conteudo__texto">
-                <li>ETEP Faculdades | 2022 - 2024 - Técnologo em Analise e Desenvolvimento de Sistemas</li>
+                <li>Estácio de Sá | 2023 - 2025 - Técnologo em Analise e Desenvolvimento de Sistemas</li>
                 <li>Universidade Anhembi Morumbi | 2014 - 2019 - Bacharelado em Administração de Empresas</li>
                 <li>Colégio Olavo Bilac | 2019 - 2020 - Técnico em Administração de Empresas</li>
             </ul>
