--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <h2 class="apresentacao__h2">Acesse minhas redes:</h2>
                 <a class="apresentacao__botoes" href="https://www.instragram.com/ana.curio">
                     <img src="./assets/instagram.png">Instagram</a>
-                <a class="apresentacao__botoes" href="https://www.github.com/anamoreiraa">
+                <a class="apresentacao__botoes" href="https://www.github.com/anadevmoreira">
                     <img src="./assets/github.png">GitHub</a>
             </div>
         </section>
