--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital a outro nível <strong class="titulo-destaque">com um Front-end de qualidade!</strong></h1>
-            <p class="apresentacao__conteudo__texto">Olá! Sou Ana Moreira, desenvolvedora Front-end com especialidade em React, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
+            <p class="apresentacao__conteudo__texto">Olá! Sou Ana Moreira, desenvolvedora Front-end com especialidade em Angular, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
             <div class="apresentacao__links">
                 <h2 class="apresentacao__h2">Acesse minhas redes:</h2>
                 <a class="apresentacao__botoes" href="https://www.instragram.com/ana.curio">
